# ChangeLog for net-im/skype
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/skype/ChangeLog,v 1.162 2014/10/01 07:18:56 amynka Exp $

  01 Oct 2014; Amy Winston <amynka@gentoo.org> skype-4.3.0.37.ebuild:
  Updated license bug #523948

  31 Aug 2014; Amy Winston <amynka@gentoo.org> metadata.xml:
  Add myself to maintainers

  30 Aug 2014; Ulrich Müller <ulm@gentoo.org> skype-4.3.0.37.ebuild:
  Depend on 32-bit pulseaudio, bug 518922.

  30 Aug 2014; Michał Górny <mgorny@gentoo.org>
  -files/skype-4.2.0.11-desktop.patch, -files/skype-4.2.0.13-desktop.patch,
  -skype-2.2.0.35-r99.ebuild, -skype-4.0.0.8-r1.ebuild, -skype-4.1.0.20.ebuild,
  -skype-4.2.0.11-r1.ebuild, -skype-4.2.0.11.ebuild, -skype-4.2.0.13.ebuild,
  metadata.xml:
  Remove old versions that can no longer connect to Skype servers. Suggested by
  Joost Roeleveld.

  05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> skype-2.2.0.35-r99.ebuild,
  skype-4.0.0.8-r1.ebuild, skype-4.1.0.20.ebuild, skype-4.2.0.11-r1.ebuild,
  skype-4.2.0.11.ebuild, skype-4.2.0.13.ebuild, skype-4.3.0.37.ebuild:
  Remove trailing '.' from DESCRIPTION.

  19 Jun 2014; Jauhien Piatlicki <jauhien@gentoo.org> skype-4.3.0.37.ebuild:
  add pulseaudio USE, as Skype has no ALSA support now

*skype-4.3.0.37 (18 Jun 2014)

  18 Jun 2014; Jauhien Piatlicki <jauhien@gentoo.org>
  +files/skype-4.3.0.37-desktop.patch, +skype-4.3.0.37.ebuild:
  version bump, closing bug #513712, thanks to Manuel Rüger

  18 Jun 2014; Michał Górny <mgorny@gentoo.org> skype-2.2.0.35-r99.ebuild,
  skype-4.0.0.8-r1.ebuild, skype-4.1.0.20.ebuild, skype-4.2.0.11-r1.ebuild,
  skype-4.2.0.11.ebuild, skype-4.2.0.13.ebuild:
  Update dependencies to require guaranteed EAPI=5 or multilib ebuilds, bug
  #513718.

*skype-4.2.0.13 (29 Jan 2014)

  29 Jan 2014; Justin Lecher <jlec@gentoo.org> skype-4.2.0.11-r1.ebuild,
  +skype-4.2.0.13.ebuild, +files/skype-4.2.0.13-desktop.patch, metadata.xml: