@@ -1,0 +1,15 @@
+DEFINED_PHASES=compile install postinst postrm preinst prepare
+DEPEND=>=sys-apps/sed-4
+DESCRIPTION=P2P Internet Telephony (VoiceIP) client
+EAPI=5
+HOMEPAGE=http://www.skype.com/
+IUSE=apulse pax_kernel +pulseaudio selinux
+KEYWORDS=~amd64 ~x86
+LICENSE=skype-4.0.0.7-copyright BSD MIT RSA W3C regexp-UofT no-source-code
+RDEPEND=virtual/ttf-fonts amd64? ( || ( ( dev-qt/qtcore:4[abi_x86_32(-)] dev-qt/qtdbus:4[abi_x86_32(-)] dev-qt/qtgui:4[accessibility,abi_x86_32(-)] dev-qt/qtwebkit:4[abi_x86_32(-)] ) !apulse? ( >=app-emulation/emul-linux-x86-qtlibs-20120520 ) ) || ( ( media-libs/alsa-lib[abi_x86_32(-)] pulseaudio? ( media-sound/pulseaudio[abi_x86_32(-)] ) ) !apulse? ( >=app-emulation/emul-linux-x86-soundlibs-20120520 ) ) || ( ( x11-libs/libX11[abi_x86_32(-)] x11-libs/libXext[abi_x86_32(-)] x11-libs/libXScrnSaver[abi_x86_32(-)] x11-libs/libXv[abi_x86_32(-)] ) !apulse? ( >=app-emulation/emul-linux-x86-xlibs-20120520 ) ) apulse? ( media-sound/apulse[abi_x86_32(-)] ) ) x86? ( media-libs/alsa-lib x11-libs/libX11 x11-libs/libXext x11-libs/libXScrnSaver x11-libs/libXv dev-qt/qtcore:4 dev-qt/qtdbus:4 dev-qt/qtgui:4[accessibility] dev-qt/qtwebkit:4 apulse? ( media-sound/apulse ) ) pulseaudio? ( media-sound/pulseaudio ) selinux? ( sec-policy/selinux-skype )
+REQUIRED_USE=apulse? ( !pulseaudio )
+RESTRICT=mirror bindist strip
+SLOT=0
+SRC_URI=http://download.skype.com/linux/skype-4.3.0.37.tar.bz2
+_eclasses_=eutils	32548a82e42dc26e3312581476d2f20c	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	pax-utils	dfe060cb70d89757fde5c1ff8405e950	toolchain-funcs	0f1760274637a138b99bb649202ea402
+_md5_=02b1da9b87c9b88a034d658395f24787
