@@ -3,17 +3,23 @@ Hash: SHA256
 
 AUX skype-4.3.0.37-desktop.patch 331 SHA256 afc6c53311814b1bcbf90c04f69fd3d9fbe2495d94811c80ba3332d8f1b31bd8 SHA512 3141a1b3e70836fead32e612da44f2a4312443e26b549bdd864602e9119be6f2b92f2e829f89cb28ba54607c2db28b00ab8b8d10fecbaada435bd6dacb8f6f5d WHIRLPOOL 2b3f98d5c62b246c43dddf7005d2009d049e9c9c21d7f77e069389b7de70ef203e4ac2c263e5af59d9633e5ebe5145717f47d41f7057b0b9b09eaa4e4bf514db
 DIST skype-4.3.0.37.tar.bz2 19310701 SHA256 8c99dc3978a588fb13303df7c8134379fb55b8dd460efefbc79ae594269b892d SHA512 935d0c06c031a90414f9b20c9a782c59deee36abff781c08f1dfd62194763dc9674bb85d478ae916b1bf440b123291d64380bc28295e9ecdd6522d17b434b7a5 WHIRLPOOL 1e5a84b04d7eb9bbf3bae9ae6e69bb41587a1cef7f5ff19af0363343fd7fc949d5202959efaf93b0ed9ccb939b8b2ad4d61fc9626fffbdc2a8d898f9fa29b300
-EBUILD skype-4.3.0.37.ebuild 3320 SHA256 9a75b62a1bfa86c179bc7be7fa723adef792a0c4b67f423e2d24c30f39b1ff3f SHA512 8e448c6bc581cbbd3c5b216e2d3f77c1547eb8b79065bf1cb8b9c54e08b52b7fd87237cdba9684bad139fbc11a4612fc5446d05349a72459780821e2b9fe420d WHIRLPOOL 1f44a60bdd70225c21098117fa4164e97a9029becd231ada0ba11afc101606d7168d56e55866650293e54e6609fe3ac879e9f32caa3fcf374991c304bcf2c4a8
-MISC ChangeLog 28959 SHA256 ddd978de6990f2b53eb161d440e880e1090c9a5002926de04b8570fcadf3255e SHA512 688116552cb54e30c245d24a6a2358088ecd8df9267a8eff66ffcf3edb5d8c726ed9ef0f6bd6885810ecdb142b76875a4205ca7390421225c5cbc85879e3c687 WHIRLPOOL d49a51222e5dc3ad61b5bae69800867a79b80a78f506fa7f24daab2b0b331fcf4b7a5472e3135fd9295259ed58e2484ef669dcbc4465ec9e3abb37c97e3d631f
-MISC metadata.xml 578 SHA256 f07e1cc5abe2faf37fa22373b1d585dddd7491c2bb55e6415116611e6f24d8e0 SHA512 0dea233fa048f2fc98d7dbc49ce109cc5735e87b52f9c4d6dbd70ae5e00b69e2c373a6c8b4647657e9b9e146f9ad58e40eb49334a83db445f48b4724acfdbfbc WHIRLPOOL 143915cc34b36701c05a3ebfc219cecc250e1e8b35cd712dac021cd8c8e8f18eb1c979b35d83217d1686644600c82ca4c73edf4f59ce896acbea8e2c886553d0
+EBUILD skype-4.3.0.37-r1.ebuild 3697 SHA256 1b7668e1db3cf3383bc63f7810ee3f90493812dd256fc76c9fd10d8f5d25b86a SHA512 55747c5d79639766a22c8e8c0a0764957c65d7d4ad5f4fa1f1c17cb34d51f024b1c075c8d7ff168ef1a125a5d464b68cd9e61519d8bae0cd596ab2b1ef8a34b3 WHIRLPOOL 6977d96b5329eb3a094d4ddfb96586fdd85c2de65027c2f4a9bb8086434bdb35873148d061dcfa4a4fc360be50cde98eeb16fc647cc17cdaf4bd4065eddf53d1
+MISC ChangeLog 29155 SHA256 d030d3f55c1ca1d0383e899f72d4d67334e30d86ab48ec0863b6a39de92ac05b SHA512 eafaae97d64b1cffb16a18d27e600702fafdfba772efc30ad70ea2a72bc79511be4bda5aaee2db0a28fa461ef6d8945001132901f3d64daa537b4b6304f14dfc WHIRLPOOL 73b3581fef7dbfe7d0d33a0c493cc910e14c5e4996c47263338e8e033ffdb387afb0ecab1dd6d1bae35a376b27d34f040a1384486b22f85d751f18c681099c0e
+MISC metadata.xml 665 SHA256 530bd6a9f0ae4a4fd1f846fa1d33cf6068102dff09cd755071d21aad632465aa SHA512 84c28c6e8d857c1fb7dbd18dab22fd3c682c167e3a8db33630836a0c13096d603b3217772216d55d239d8bdcfb74ff57497095b8297f5228e720e351c7e684fb WHIRLPOOL c133a1f94f7dcaa2da61ec2b0928de4840a692971853947280d65b39b81faba2634616dc0384d7e8c120cd0017701d84ba8628ae17c5ef8467435460d1b29534
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUK6rwAAoJEDuJ1FA05peBnrkIAMK614AEbHj91ML7ztcAWZWk
-kjbaGhe0pV6RK8bzM2QrTQLQFaly2S1BU0JUgBI157UD2Ua/E+0tDEWFgQYOqXbr
-zmT8DYrXQG2GXiMdHItXcwIGFSAbT/yR1cWVpohkugdVay2gIyt9HubtVqTkeAiC
-Dd8FM/dmlOr3uvpZtmAbAIx5+I6V/kUSNXc+AmkLlIU0//7y3qmO0Tlx5+51KTKc
-H3XKK0iVeyhUxQGzakB4g16+Ju/90WI1BQHmcomjxDk4HaBjs7sFwd/gZmeT3IgH
-52dBMJfSDn++uC4MMbQ4nEON05JzrXIVQF6O3B/jIRxizYmus+YIlxi0G0+9kac=
-=cd9L
+iQIcBAEBCAAGBQJUMRNZAAoJELvuk32y76HUzAAQALk7Xl81KsWMhyiFuHUXi2aY
+k8afaNtVMCBnC8i5D+qaUI9naqWNZPmP985ThxYoyA4XwRi4KEhHWGkYAfjtklG4
+753PKH6p7uPTcCJxzzYHw4RSUGDFUMsTw4sjgvYrgNmCW2HtPh+oNnWb+Er7yzTt
+Y18Tz64uuzn6bN9DLUg7SZtfB9cxLI9fZRqKm517lsubqBgyewAMvPZm3Eby+VXE
+tPm0qExKToDX68rW4aY7CGTNP1Md6TsCExQaeWNtt+jiV18kv7elUEmDbiU1SBhj
+OEWy+e7TMcn71DJTqsMnaANUfFpQaAFJm4+iFuWt63T2O0fh2ywg0vwVEL5cwB/X
+LF2wRjjW1tr4UIDhZt8F50est+kOSatkIX7Q75Sbb7R6q8RL5yN/kEbp+3+HI94X
+ES/GgoIwg0gO9AbOw+Kl5I9WGx03va6WSCuaqStW5HY2lyBM3Hb9zYB7j6G4F7qt
+7q2FDkJb4Aora1uqN2UkTFS/zWhhTQ2Va1Ftha+rY+qQFAUYpNSK0vZTOPWbwQ58
+zMLn1SLOXTd75hJdQ3aq/MSyoW63vyOsj7YbjytU03WHgcZ9i1HUF9M19Q9ru4Df
+N/qxe5oAkLkFAnUolosmWYWZ4g0/WUr85fHpyLoq7jrilUkWzKkYK+WJ0PCoHtlI
+1nEtTTqS8kkC/UGGX51F
+=yaog
 -----END PGP SIGNATURE-----
