@@ -4,12 +4,13 @@
   <maintainer>
     <email>amynka@gentoo.org</email>
   </maintainer>
-  <longdescription>Skype is the next phenomenon from the people who 
-	brought you KaZaA. Just like KaZaA, Skype uses P2P (peer-to-peer) 
-	technology to connect you to other users  not to share files this 
+  <longdescription>Skype is the next phenomenon from the people who
+	brought you KaZaA. Just like KaZaA, Skype uses P2P (peer-to-peer)
+	technology to connect you to other users  not to share files this
 	time, but to talk and chat with your friends.
 	</longdescription>
   <use>
+    <flag name="apulse">Use <pkg>media-sound/apulse</pkg> for PulseAudio emulation</flag>
     <flag name="pax_kernel">Triggers a paxmarking of the main skype binary</flag>
   </use>
 </pkgmetadata>
