@@ -13,6 +13,7 @@ sys-devel/binutils
 sys-devel/libtool
 sys-devel/make
 dev-lang/python
+dev-lang/perl
 sys-apps/sandbox
 dev-util/ccache
 sys-devel/gcc
