@@ -1,6 +1,12 @@
 # ChangeLog for net-im/skype
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/skype/ChangeLog,v 1.162 2014/10/01 07:18:56 amynka Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/skype/ChangeLog,v 1.163 2014/10/05 09:45:54 jauhien Exp $
+
+*skype-4.3.0.37-r1 (05 Oct 2014)
+
+  05 Oct 2014; Jauhien Piatlicki <jauhien@gentoo.org> +skype-4.3.0.37-r1.ebuild,
+  -skype-4.3.0.37.ebuild, metadata.xml:
+  introduce apulse support, bug 524164
 
   01 Oct 2014; Amy Winston <amynka@gentoo.org> skype-4.3.0.37.ebuild:
   Updated license bug #523948
